test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_parse/unclosed_subscript.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  ]
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ;
  return
  identifier(arr)
  [
  const int(1)
  ;
  }
